# cape-lez-parallel-executor

./: .gitignore  Cargo.toml  README.md
docs/: kabre_run_guide.md
paper/: main.tex  references.bib
results/raw/: kabre-578276.err  kabre-578276.out  kabre_results.csv  results.csv
results/summary/: environment_comparison.csv  summary.csv
scripts/: compare_environments.py  plot_results.py  run_local_matrix.sh
scripts/slurm/: cape_kabre.sbatch
src/: bench.rs  hash.rs  lib.rs  main.rs  metrics.rs  model.rs  state.rs  tx.rs
src/executor/: mod.rs  optimistic.rs  sequential.rs  static_scheduler.rs
src/workload/: hotspot.rs  mod.rs  no_conflict.rs  private_state.rs  token_transfer.rs  zipfian.rs
tests/: conflict_rules.rs  correctness.rs  model_semantics.rs  workloads.rs
