[package]
name = "cape"
version = "0.1.0"
edition = "2024"

[dependencies]
blake3 = "1.8.5"
clap = { version = "4.6.1", features = ["derive"] }
csv = "1.4.0"
rand = "0.10.1"
rand_distr = "0.6.0"
rayon = "1.12.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
